# copper

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: coverage.yml  tests.yml  tests_mingw.yml
docs/: benchmark.adoc  motivation.adoc  reference.adoc  techdetails.adoc
include/: copper.h
tests/: main.cpp  template_instantiations.cpp  test_advanced.cpp  test_basics.cpp  test_channel_read_view.cpp  test_channel_write_view.cpp  test_iterators.cpp  test_select.cpp  test_void_basics.cpp  test_void_select.cpp  test_void_vselect.cpp  test_vselect.cpp  util.h
tests/channels/: test_basics.cpp  test_special_cases.cpp  test_void_basics.cpp
tests/iterators/: test_channel_pop_iterator.cpp  test_channel_push_iterator.cpp
tests/select/: test_select.cpp  test_void_select.cpp  test_void_vselect.cpp  test_vselect.cpp
tests/views/: test_channel_read_view.cpp  test_channel_write_view.cpp
